updated ant build file to comply with tomcat6 best practices

--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,6 @@ appserver.home=/usr/share/tomcat6
 appserver.lib=${appserver.home}/lib
 deploy.path=${appserver.home}/webapps
 
-tomcat.manager.url=http://localhost:8080/manager
-tomcat.manager.username=admin
-tomcat.manager.password=pass
+manager.url=http://localhost:8080/manager
+manager.username=admin
+manager.password=pass
