--- a/build.properties
+++ b/build.properties
@@ -7,3 +7,9 @@ deploy.path=${appserver.home}/webapps
 manager.url=http://localhost:8080/manager
 manager.username=admin
 manager.password=pass
+
+#  Needed for ant hsql targets.
+db.driver=org.hsqldb.jdbcDriver
+db.url=jdbc:hsqldb:hsql://localhost
+db.user=sa
+db.pw=
