--- a/src/config/web.xml
+++ b/src/config/web.xml
@@ -17,7 +17,7 @@
 
   <servlet-mapping>
     <servlet-name>springapp</servlet-name>
-    <url-pattern>*.htm</url-pattern>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
