--- a/.classpath
+++ b/.classpath
@@ -4,30 +4,34 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/usr/share/tomcat6/lib/tomcat6-servlet-2.5-api-6.0.24.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-webmvc-portlet-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-webmvc-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-web-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-tx-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-test-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-struts-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-oxm-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-orm-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-jms-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-jdbc-3.2.1.RELEASE.jar" sourcepath="/home/Developer/.m2/repository/org/springframework/spring-jdbc/3.2.1.RELEASE/spring-jdbc-3.2.1.RELEASE-sources.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-instrument-tomcat-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-instrument-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-expression-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-core-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-context-support-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-context-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-build-src-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-beans-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-aspects-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/spring-aop-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/hsqldb-2.3.2.jar"/>
-	<classpathentry kind="lib" path="/home/Developer/spring-3.2.1-jars/commons-logging-1.2.jar" sourcepath="/home/Developer/.m2/repository/commons-logging/commons-logging/1.2/commons-logging-1.2-sources.jar"/>
+	<classpathentry kind="lib" path="dependencies/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/aspectjweaver-1.8.1.jar"/>
+	<classpathentry kind="lib" path="dependencies/commons-dbcp-1.4.jar"/>
+	<classpathentry kind="lib" path="dependencies/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="dependencies/commons-pool-1.6.jar"/>
+	<classpathentry kind="lib" path="dependencies/hsqldb-2.3.2.jar"/>
+	<classpathentry kind="lib" path="dependencies/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="dependencies/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="dependencies/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-aop-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-aspects-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-beans-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-build-src-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-context-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-context-support-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-core-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-expression-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-instrument-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-instrument-tomcat-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-jdbc-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-jms-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-orm-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-oxm-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-struts-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-test-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-tx-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-web-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-webmvc-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="dependencies/spring-webmvc-portlet-3.2.1.RELEASE.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/build"/>
 </classpath>
