--- a/.classpath
+++ b/.classpath
@@ -4,34 +4,34 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/usr/share/tomcat6/lib/tomcat6-servlet-2.5-api-6.0.24.jar"/>
-	<classpathentry kind="lib" path="dependencies/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="dependencies/aspectjweaver-1.8.1.jar"/>
-	<classpathentry kind="lib" path="dependencies/commons-dbcp-1.4.jar"/>
-	<classpathentry kind="lib" path="dependencies/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="dependencies/commons-pool-1.6.jar"/>
-	<classpathentry kind="lib" path="dependencies/hsqldb-2.3.2.jar"/>
-	<classpathentry kind="lib" path="dependencies/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="dependencies/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="dependencies/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-aop-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-aspects-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-beans-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-build-src-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-context-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-context-support-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-core-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-expression-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-instrument-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-instrument-tomcat-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-jdbc-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-jms-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-orm-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-oxm-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-struts-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-test-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-tx-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-web-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-webmvc-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="dependencies/spring-webmvc-portlet-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/aspectjweaver-1.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-dbcp-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-pool-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb-2.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aop-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aspects-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-beans-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-build-src-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-support-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-core-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-expression-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-instrument-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-instrument-tomcat-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-jdbc-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-jms-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-orm-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-oxm-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-struts-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-test-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-tx-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-web-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-webmvc-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-webmvc-portlet-3.2.1.RELEASE.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/build"/>
 </classpath>
