Add db name in conection string.

--- a/ProyectoWeb/src/resources/jdbc.properties
+++ b/ProyectoWeb/src/resources/jdbc.properties
@@ -1,4 +1,4 @@
 db.driverClassName=org.hsqldb.jdbcDriver
-db.url=jdbc:hsqldb:hsql://localhost
+db.url=jdbc:hsqldb:hsql://localhost/test
 db.user=sa
 db.pw=
