--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ dependencies {
     libs 'javax.servlet:jstl:1.2'
     libs 'javax.servlet:servlet-api:2.5'
     libs 'junit:junit:4.11'
-    libs 'log4j:log4j:1.2.17'
+    libs 'org.apache.logging.log4j:log4j-api:2.24.3'
+    libs 'org.apache.logging.log4j:log4j-core:2.24.3'
+    libs 'org.apache.logging.log4j:log4j-jcl:2.24.3'
     libs 'org.springframework:spring-aop:3.2.1.RELEASE'
     libs 'org.springframework:spring-aspects:3.2.1.RELEASE'
     libs 'org.springframework:spring-beans:3.2.1.RELEASE'
