Update to Spring 6.1.21 and JDK 17

--- a/build.gradle
+++ b/build.gradle
@@ -25,25 +25,22 @@ dependencies {
     libs 'org.apache.logging.log4j:log4j-api:2.24.3'
     libs 'org.apache.logging.log4j:log4j-core:2.24.3'
     libs 'org.apache.logging.log4j:log4j-jcl:2.24.3'
-    libs 'org.springframework:spring-aop:3.2.1.RELEASE'
-    libs 'org.springframework:spring-aspects:3.2.1.RELEASE'
-    libs 'org.springframework:spring-beans:3.2.1.RELEASE'
-    libs 'org.springframework:spring-context:3.2.1.RELEASE'
-    libs 'org.springframework:spring-context-support:3.2.1.RELEASE'
-    libs 'org.springframework:spring-core:3.2.1.RELEASE'
-    libs 'org.springframework:spring-expression:3.2.1.RELEASE'
-    libs 'org.springframework:spring-instrument:3.2.1.RELEASE'
-    libs 'org.springframework:spring-instrument-tomcat:3.2.1.RELEASE'
-    libs 'org.springframework:spring-jdbc:3.2.1.RELEASE'
-    libs 'org.springframework:spring-jms:3.2.1.RELEASE'
-    libs 'org.springframework:spring-orm:3.2.1.RELEASE'
-    libs 'org.springframework:spring-oxm:3.2.1.RELEASE'
-    libs 'org.springframework:spring-struts:3.2.1.RELEASE'
-    libs 'org.springframework:spring-test:3.2.1.RELEASE'
-    libs 'org.springframework:spring-tx:3.2.1.RELEASE'
-    libs 'org.springframework:spring-web:3.2.1.RELEASE'
-    libs 'org.springframework:spring-webmvc:3.2.1.RELEASE'
-    libs 'org.springframework:spring-webmvc-portlet:3.2.1.RELEASE'
+    libs 'org.springframework:spring-aop:6.1.21'
+    libs 'org.springframework:spring-aspects:6.1.21'
+    libs 'org.springframework:spring-beans:6.1.21'
+    libs 'org.springframework:spring-context:6.1.21'
+    libs 'org.springframework:spring-context-support:6.1.21'
+    libs 'org.springframework:spring-core:6.1.21'
+    libs 'org.springframework:spring-expression:6.1.21'
+    libs 'org.springframework:spring-instrument:6.1.21'
+    libs 'org.springframework:spring-jdbc:6.1.21'
+    libs 'org.springframework:spring-jms:6.1.21'
+    libs 'org.springframework:spring-orm:6.1.21'
+    libs 'org.springframework:spring-oxm:6.1.21'
+    libs 'org.springframework:spring-test:6.1.21'
+    libs 'org.springframework:spring-tx:6.1.21'
+    libs 'org.springframework:spring-web:6.1.21'
+    libs 'org.springframework:spring-webmvc:6.1.21'
 }
 
 task copyDependencies(type: Copy) {
