--- a/ProyectoWeb/.classpath
+++ b/ProyectoWeb/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="lib" path="/usr/share/tomcat6/lib/tomcat6-servlet-2.5-api-6.0.24.jar"/>
 	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/aspectjweaver-1.8.1.jar"/>
@@ -15,25 +15,21 @@
        <classpathentry kind="lib" path="lib/log4j-api-2.24.3.jar"/>
        <classpathentry kind="lib" path="lib/log4j-core-2.24.3.jar"/>
        <classpathentry kind="lib" path="lib/log4j-jcl-2.24.3.jar"/>
-	<classpathentry kind="lib" path="lib/spring-aop-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-aspects-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-beans-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-build-src-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-context-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-context-support-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-core-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-expression-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-instrument-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-instrument-tomcat-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-jdbc-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-jms-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-orm-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-oxm-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-struts-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-test-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-tx-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-web-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-webmvc-3.2.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-webmvc-portlet-3.2.1.RELEASE.jar"/>
+    <classpathentry kind="lib" path="lib/spring-aop-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-aspects-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-beans-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-context-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-context-support-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-core-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-expression-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-instrument-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-jdbc-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-jms-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-orm-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-oxm-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-test-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-tx-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-web-6.1.21.jar"/>
+    <classpathentry kind="lib" path="lib/spring-webmvc-6.1.21.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/build"/>
 </classpath>
